# llm-eval

./: .env.example  .gitignore  README.md  pyproject.toml  run_eval.py
data/: golden_set.jsonl
data/experiments/: gpt-4.1-mini_20260409_144214.json  gpt-4o-mini_20260409_144120.json
docs/: design.md  intro.md  plan.md  success_criteria.md
evals/: conftest.py
evals/component/: test_extraction.py  test_router.py
evals/judge/: test_judge.py
llm_eval/: agent.py  schemas.py  trace.py
llm_eval/eval/: dataset.py  experiment.py  runner.py
llm_eval/scoring/: base.py  deterministic.py  embedding.py  llm_judge.py
notebooks/: 02_eval_report.py  03_model_comparison.py  eval_report.py  model_comparison.py
notebooks/__marimo__/session/: 02_eval_report.py.json
tests/unit/: test_scoring.py  test_scoring_async.py
