[project]
name = "llm-eval"
version = "0.1.0"
description = "Rigorous LLM pipeline evaluation on the job-extraction use case"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "logfire>=0.40",
    "rich>=13.7",
    "rapidfuzz>=3.9",
    "numpy>=1.26",
    "marimo>=0.10",
    "altair>=5.3",
    "pandas>=2.2",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning:pydantic"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.logfire]
ignore_no_config = true

[tool.black]
line-length = 100
